[package]
name = "blurslice"
version = "0.1.0"
edition = "2021"
authors = ["Lindsay Roberts <os@lindsayr.com>"]
license = "MIT"
description = "An implementation of \"Fastest Gaussian Blur\" for N-channel image slices"
repository = "https://github.com/lsr0/blurslice"
keywords = ["graphics", "blur", "image"]
categories = ["multimedia::images", "graphics"]

[dependencies]

[[bench]]
name = "bench"
harness = false

[[test]]
name = "file"
harness = false

[dev-dependencies]
image = "0"
criterion = "0.3"
